--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "🏍️ moto-ride – Your Digital Motorcycle Hub A sleek and powerful web interface for motorcycle enthusiasts and dealers. Browse, filter, and showcase bikes with ease. Responsive design, smart filtering, and a seamless shopping experience — where performance meets style.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
